--- a/style.scss
+++ b/style.scss
@@ -16,3 +16,14 @@ body {
   max-width: 1000px;
   margin: 0 auto;
 }
+
+.mobile .body,
+.mobile .header,
+.mobile .main,
+.mobile .footer,
+.mobile #someOtherElement {
+  font-family: "Hiragino Mincho Pro", "ヒラギノ角ゴ ProN W3", "HiraKakuProN-W3",
+    "ヒラギノ角ゴ Pro W3", "HiraKakuPro-W3", "メイリオ", Meiryo,
+    "ＭＳ Ｐゴシック", "MS Pgothic", "Osaka", sans-serif, Helvetica,
+    Helvetica Neue, Arial, Verdana;
+}
