--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,22 @@
-@charset "UTF-8";
+@font-face {
+  font-family: "Hiragino Mincho Pro";
+  src: url("./font/HiraKakuPro-W6-AlphaNum.eot");
+  src: url("./font/HiraKakuPro-W6-AlphaNum.eot?#iefix") format("embedded-opentype"), url("./font/HiraKakuPro-W6-AlphaNum.woff2") format("woff2"), url("./font/HiraKakuPro-W6-AlphaNum.woff") format("woff"), url("./font/HiraKakuPro-W6-AlphaNum.ttf") format("truetype"), url("./font/HiraKakuPro-W6-AlphaNum.svg#HiraKakuPro-W6-AlphaNum") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 100;
+  src: url("../fonts/poppins/poppins-v5-latin-100.eot");
+  /* IE9 Compat Modes */
+  src: local("Poppins Thin"), local("Poppins-Thin"), url("../fonts/poppins/poppins-v5-latin-100.eot?#iefix") format("embedded-opentype"), url("../fonts/poppins/poppins-v5-latin-100.woff2") format("woff2"), url("../fonts/poppins/poppins-v5-latin-100.woff") format("woff"), url("../fonts/poppins/poppins-v5-latin-100.ttf") format("truetype"), url("../fonts/poppins/poppins-v5-latin-100.svg#Poppins") format("svg");
+  /* Legacy iOS */
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -9,7 +27,7 @@
 body {
   background: #fff;
   font-size: 40px;
-  font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-family: Hiragino Mincho Pro;
 }
 
 .container {
