--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@
 body {
   background: #fff;
   font-size: 40px;
-  font-family: "Hiragino Mincho Pro";
+  font-family: Hiragino Mincho Pro;
 }
 
 .container {
